fixed padding on mobile page partner hero

--- a/assets/scss/pages/_partner.scss
+++ b/assets/scss/pages/_partner.scss
@@ -84,7 +84,7 @@
 @media screen and (max-width: 47.9375em) {
 	.page-template-page-partner {
 		.hero {
-			padding: rem(240) 0 0;
+			padding: rem(70) 0 0;
 			margin-top: rem(-150);
 		}
 
